@@ -1,3 +1,7 @@
+9 March 2015: Wouter
+	- Fix origin directive from unused old value and subdomain parser
+	  failure, reported by John Van de Meulebrouck Brendgard (NORDUnet).
+
 2 March 2015: Wouter
 	- Fix b64pton out of bounds error on invalid zonefile input.
 
